--- a/Utilities/curl/curl.csproj
+++ b/Utilities/curl/curl.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{37BA97C1-E076-4429-AE74-24E674DC1BCC}</ProjectGuid>
+    <ProjectGuid>{E233125C-D71C-4CD0-81B0-132C68E68931}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ShipHunter</RootNamespace>
-    <AssemblyName>ShipHunter</AssemblyName>
+    <RootNamespace>curl</RootNamespace>
+    <AssemblyName>curl</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -45,7 +45,6 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ship.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
