--- a/Utilities/grep/grep.csproj
+++ b/Utilities/grep/grep.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{37BA97C1-E076-4429-AE74-24E674DC1BCC}</ProjectGuid>
+    <ProjectGuid>{FC42CF23-3BE2-4B25-8353-91F4F2341BA7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ShipHunter</RootNamespace>
-    <AssemblyName>ShipHunter</AssemblyName>
+    <RootNamespace>grep</RootNamespace>
+    <AssemblyName>grep</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -45,7 +45,6 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ship.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
