Added ToDoList controls

--- a/WidgetLibrary/WidgetLibrary/Web.config
+++ b/WidgetLibrary/WidgetLibrary/Web.config
@@ -18,6 +18,8 @@
         <add tagPrefix="wl" src="~/Controls/Counter.ascx" tagName="Counter"/>
         <add tagPrefix="wl" src="~/Controls/FontPreview.ascx" tagName="FontPreview"/>
         <add tagPrefix="wl" src="~/Controls/Weather.ascx" tagName="Weather"/>
+        <add tagPrefix="wl" src="~/Controls/ToDoInput.ascx" tagName="ToDoInput"/>
+        <add tagPrefix="wl" src="~/Controls/ToDoList.ascx" tagName="ToDoList" />
       </controls>
     </pages>
     <httpModules>
