--- a/ErrorHandlingExample/ErrorHandlingExample/Web.config
+++ b/ErrorHandlingExample/ErrorHandlingExample/Web.config
@@ -11,6 +11,9 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
     </httpModules>
     <trace enabled="true" pageOutput="true" localOnly="false"  />
+    <customErrors mode="On" defaultRedirect="GenericErrorPage.aspx">
+      <error statusCode="404" redirect="MissingPage.aspx"/>
+    </customErrors>
   </system.web>
   <system.codedom>
     <compilers>
