--- a/RpnCalculator/RpnCalculator/RpnCalculator.csproj
+++ b/RpnCalculator/RpnCalculator/RpnCalculator.csproj
@@ -81,6 +81,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddOperation.cs" />
     <Compile Include="Calculator.cs" />
     <Compile Include="CalculatorUI.aspx.cs">
       <DependentUpon>CalculatorUI.aspx</DependentUpon>
@@ -89,10 +90,19 @@
     <Compile Include="CalculatorUI.aspx.designer.cs">
       <DependentUpon>CalculatorUI.aspx</DependentUpon>
     </Compile>
+    <Compile Include="CosOperation.cs" />
+    <Compile Include="DivideOperation.cs" />
+    <Compile Include="ExponentOperation.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="MultiplyOperation.cs" />
+    <Compile Include="NaturalOperation.cs" />
+    <Compile Include="NegateOperation.cs" />
+    <Compile Include="IOperation.cs" />
+    <Compile Include="OperationType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReciprocalOperation.cs" />
     <Compile Include="RpnCalculator.Master.cs">
       <DependentUpon>RpnCalculator.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -100,6 +110,9 @@
     <Compile Include="RpnCalculator.Master.designer.cs">
       <DependentUpon>RpnCalculator.Master</DependentUpon>
     </Compile>
+    <Compile Include="SinOperation.cs" />
+    <Compile Include="SquareRootOperation.cs" />
+    <Compile Include="SubtractOperation.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
