Try to implement create comment

--- a/Week6/Day2/Blahgger/Blahgger/Blahgger.csproj
+++ b/Week6/Day2/Blahgger/Blahgger/Blahgger.csproj
@@ -178,10 +178,10 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Post\Create.cshtml" />
     <Content Include="Views\Post\Details.cshtml" />
+    <Content Include="Views\Comment\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Comment\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
