--- a/Week6/Day3/CommunityShedMVC/CommunityShedMVC/Web.config
+++ b/Week6/Day3/CommunityShedMVC/CommunityShedMVC/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+   <connectionStrings>
+    <add name="CommunityShed" connectionString="Server=localhost;Database=CommunityShed;Trusted_Connection=True;" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
