--- a/Week6/Day3/CommunityShedMVC/CommunityShedMVC/CommunityShedMVC.csproj
+++ b/Week6/Day3/CommunityShedMVC/CommunityShedMVC/CommunityShedMVC.csproj
@@ -116,8 +116,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Community.cs" />
     <Compile Include="Models\Person.cs" />
+    <Compile Include="Models\PersonRole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\CustomIdentity.cs" />
+    <Compile Include="Security\CustomPrincipal.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\RegisterViewModel.cs" />
   </ItemGroup>
