Created client controller and view

--- a/Week7/InvoiceMaker/InvoiceMaker/Web.config
+++ b/Week7/InvoiceMaker/InvoiceMaker/Web.config
@@ -4,7 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  
+  <connectionStrings>
+    <add name="InvoiceMaker" connectionString="Server=localhost;Database=InvoiceMaker;Trusted_Connection=True;" />
+  </connectionStrings>
   <system.webServer>
     <handlers>
       <add name="PlainTextHashHandler" verb="GET" path="*.hash" type="InvoiceMaker.Md5HashHandler"/>
