--- a/Week7/InvoiceMaker/InvoiceMaker/InvoiceMaker.csproj
+++ b/Week7/InvoiceMaker/InvoiceMaker/InvoiceMaker.csproj
@@ -100,6 +100,11 @@
     <Content Include="Views\Shared\InvoiceMakerLayout.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Clients\Index.cshtml" />
+    <Content Include="Views\Clients\Create.cshtml" />
+    <Content Include="Views\Clients\Edit.cshtml" />
+    <Content Include="Views\WorkTypes\Index.cshtml" />
+    <Content Include="Views\WorkTypes\Create.cshtml" />
+    <Content Include="Views\WorkTypes\Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -116,8 +121,12 @@
   <ItemGroup>
     <Compile Include="Controllers\ClientsController.cs" />
     <Compile Include="Controllers\InvoicesController.cs" />
+    <Compile Include="Controllers\WorkTypesController.cs" />
     <Compile Include="Data\DatabaseHelper.cs" />
     <Compile Include="FormModels\CreateClient.cs" />
+    <Compile Include="FormModels\CreateWorkType.cs" />
+    <Compile Include="FormModels\EditClient.cs" />
+    <Compile Include="FormModels\EditWorkType.cs" />
     <Compile Include="Initialization\RouteConfiguration.cs" />
     <Compile Include="InvoiceMakerApplication.cs" />
     <Compile Include="Md5HashHandler.cs" />
@@ -132,6 +141,7 @@
     <Compile Include="Models\WorkType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ClientRepository.cs" />
+    <Compile Include="Repositories\WorkTypeRepository.cs" />
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
