--- a/Week7/InvoiceMaker/InvoiceMaker/InvoiceMaker.csproj
+++ b/Week7/InvoiceMaker/InvoiceMaker/InvoiceMaker.csproj
@@ -105,6 +105,10 @@
     <Content Include="Views\WorkTypes\Index.cshtml" />
     <Content Include="Views\WorkTypes\Create.cshtml" />
     <Content Include="Views\WorkTypes\Edit.cshtml" />
+    <Content Include="Views\WorkDone\Index.cshtml" />
+    <Content Include="Views\WorkDone\Create.cshtml" />
+    <Content Include="Views\WorkDone\Edit.cshtml" />
+    <Content Include="Views\WorkLineItem\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -121,11 +125,15 @@
   <ItemGroup>
     <Compile Include="Controllers\ClientsController.cs" />
     <Compile Include="Controllers\InvoicesController.cs" />
+    <Compile Include="Controllers\WorkDoneController.cs" />
+    <Compile Include="Controllers\WorkLineItemController.cs" />
     <Compile Include="Controllers\WorkTypesController.cs" />
     <Compile Include="Data\DatabaseHelper.cs" />
     <Compile Include="FormModels\CreateClient.cs" />
+    <Compile Include="FormModels\CreateWorkDone.cs" />
     <Compile Include="FormModels\CreateWorkType.cs" />
     <Compile Include="FormModels\EditClient.cs" />
+    <Compile Include="FormModels\EditWorkDone.cs" />
     <Compile Include="FormModels\EditWorkType.cs" />
     <Compile Include="Initialization\RouteConfiguration.cs" />
     <Compile Include="InvoiceMakerApplication.cs" />
@@ -141,6 +149,8 @@
     <Compile Include="Models\WorkType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ClientRepository.cs" />
+    <Compile Include="Repositories\WorkDoneRepository.cs" />
+    <Compile Include="Repositories\WorkLineItemRepository.cs" />
     <Compile Include="Repositories\WorkTypeRepository.cs" />
   </ItemGroup>
   <ItemGroup />
