--- a/Week7/InvoiceMaker/InvoiceMaker/InvoiceMaker.csproj
+++ b/Week7/InvoiceMaker/InvoiceMaker/InvoiceMaker.csproj
@@ -43,6 +43,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
@@ -128,6 +136,7 @@
     <Compile Include="Controllers\WorkDoneController.cs" />
     <Compile Include="Controllers\WorkLineItemController.cs" />
     <Compile Include="Controllers\WorkTypesController.cs" />
+    <Compile Include="Data\Context.cs" />
     <Compile Include="Data\DatabaseHelper.cs" />
     <Compile Include="FormModels\CreateClient.cs" />
     <Compile Include="FormModels\CreateWorkDone.cs" />
